--- a/assets/scss/custom-bootstrap.scss
+++ b/assets/scss/custom-bootstrap.scss
@@ -6,7 +6,7 @@ $purple: #6f42c1;
 $pink: #f9bdbd;
 $red: #ff3636;
 $orange: #F15E44;
-$yellow: #ffc107;
+$yellow: #fcd15a;
 $green: #28a745;
 $teal: #20c997;
 $cyan: #128087;
@@ -20,7 +20,7 @@ $gray-600: #868e96;
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212121;
-$black: #000;
+$black: #0d0d12;
 $grays: (100: $gray-100, 200: $gray-200, 300: $gray-300, 400: $gray-400, 500: $gray-500, 600: $gray-600, 700: $gray-700, 800: $gray-800, 900: $gray-900);
 $theme-colors: (primary: $yellow, secondary: $black, success: $green, info: $blue, warning: $yellow, danger: $red, light: $gray-300, dark: $gray-900);
 
