--- a/assets/scss/custom-bootstrap.scss
+++ b/assets/scss/custom-bootstrap.scss
@@ -1,9 +1,9 @@
 
 // Brand Colors
-$blue: #293e98;
+$blue: #1f55ce;
 $indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #f9bdbd;
+$purple: #e4a6de;
+$pink: #e8318d;
 $red: #ff3636;
 $orange: #F15E44;
 $yellow: #fcd15a;
@@ -22,20 +22,20 @@ $gray-800: #343a40;
 $gray-900: #212121;
 $black: #0d0d12;
 $grays: (100: $gray-100, 200: $gray-200, 300: $gray-300, 400: $gray-400, 500: $gray-500, 600: $gray-600, 700: $gray-700, 800: $gray-800, 900: $gray-900);
-$theme-colors: (primary: $yellow, secondary: $black, success: $green, info: $blue, warning: $yellow, danger: $red, light: $gray-300, dark: $gray-900);
+$theme-colors: (primary: $yellow, secondary: $purple, success: $green, info: $blue, warning: $yellow, danger: $red, light: $gray-300, dark: $gray-900);
 
-/*$border-radius: 60px;
+$border-radius: 10px;
 $border-radius-lg: 0.9rem;
 $border-radius-sm: 0.2rem;
 $body-bg: $white;
 
-$input-border-color: black;
+$input-border-color: $yellow;
 
-$navbar-light-color: rgba($black, 1);
-$navbar-light-hover-color: rgba($orange, 0.7);
-$navbar-light-active-color: rgba($orange, 1);
+$navbar-light-color: rgba($yellow, 1);
+$navbar-light-hover-color: rgba($white, 0.8);
+$navbar-light-active-color: rgba($white, 1);
 
-$navbar-light-toggler-icon-bg: var(--hamburger); */
+$navbar-light-toggler-icon-bg: var(--hamburger);
 
 
 @import "@/node_modules/bootstrap/scss/functions";
