--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -47,6 +47,7 @@
 
 .loader
 {
+  position: absolute;
   border: 5px solid #f3f3f3;
   border-top: 5px solid #555;
   border-radius: 50%;
@@ -54,7 +55,6 @@
   height: 50px;
   animation: spin 1s linear infinite;
   -webkit-animation: spin 1s infinite linear;
-  position: absolute;
   top: 50%;
   left: 50%;
 }
@@ -73,11 +73,16 @@
 
 .loader-div
 {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   background-color: rgba(0,0,0,0.5);
-  z-index: 10;
+  z-index: 9999;
+}
+
+.card-body
+{
+  position: relative;
 }
